--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,17 +8,29 @@ permissions:
   VeloSign.bypass.cooldown:
     description: "Allows the player to bypass the sign cooldown."
     default: op
-
+  VeloSign.savesign:
+    description: "Allows the Player to save signs"
+    default: op
+  VeloSign.getsign:
+    description: "Allows the player to retrive data from the sign"
+    default: op
+  VeloSign.signcooldown:
+    description: "Allows the player to change the cooldown duaration"
+    default: op
 commands:
   getsign:
     description: "Retrieve data (the target server) from the sign you are looking at."
     usage: /getsign
     aliases: [ds]
+    permission: VeloSign.getsign
+
   savesign:
     description: "Save a sign's data (the target server) by looking at the sign."
     usage: /savesign <serverName>
     aliases: [ssgn]
+    permission: VeloSign.savesign
   signcooldown:
     description: "Set the global cooldown (in milliseconds) for sign usage."
     usage: /signcooldown <milliseconds>
     aliases: [scd]
+    permission: VeloSign.signcooldown
