--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,8 @@ api-version: "1.21"
 description: "A plugin to link signs with Velocity, sending players to other servers."
 
 permissions:
+  VeloSign.nomessage:
+    description: "Does not send warning messages to the Player who has this permission."
   VeloSign.bypass.cooldown:
     description: "Allows the player to bypass the sign cooldown."
     default: op
