--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Velocity_Sign_Link
+name: VelocitySignLink
 version: "1.0"
 main: BasisZock.github.io.velocitySignLink.Main
 api-version: "1.21"
